# ruzu

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_RUST_VS_CPP.md  CHANGELOG.md  CLAUDE.md  CRASH_ANALYSIS.md  Cargo.toml  DEBUG_DISCUSSION.md  DIFF.md  DIFF_WITH_YUZU.md  DifferencesAvecYuzu.txt  GOALS.md  INSTR.MD  INVESTIGATION.md  PARITY_BLOCKER_STATE.md  PORTING_STYLE.md  README.md  REFACTOR_AUDIT_phase0.md  REFACTOR_TODO_sync_object.md  TODO.md  ZUYU_REFERENCE.txt  bases.json  libsvc_common.rlib
audio_core/: Cargo.toml
audio_core/src/: audio_core.rs  audio_event.rs  audio_in_manager.rs  audio_manager.rs  audio_out_manager.rs  audio_render_manager.rs  errors.rs  lib.rs  raw_write_trace.rs
audio_core/src/adsp/: adsp.rs  mailbox.rs  mod.rs
audio_core/src/common/: audio_renderer_parameter.rs  common.rs  feature_support.rs  mod.rs  wave_buffer.rs  workbuffer_allocator.rs
audio_core/src/device/: audio_buffer.rs  audio_buffers.rs  device_session.rs  guest_memory.rs  mod.rs
audio_core/src/in/: audio_in.rs  audio_in_system.rs  mod.rs
audio_core/src/opus/: decoder.rs  decoder_manager.rs  hardware_opus.rs  mod.rs  parameters.rs
audio_core/src/renderer/: audio_device.rs  audio_renderer.rs  mod.rs  system.rs  system_manager.rs
audio_core/src/sink/: cubeb_sink.rs  mod.rs  null_sink.rs  oboe_sink.rs  sdl2_sink.rs  sink.rs  sink_details.rs  sink_stream.rs
common/: Cargo.toml
common/src/: address_space.rs  alignment.rs  announce_multiplayer_room.rs  bit_field.rs  bit_set.rs  bit_util.rs  bounded_threadsafe_queue.rs  cityhash.rs  container_hash.rs  detached_tasks.rs  dynamic_library.rs  elf.rs  fastmem_registry.rs  fiber.rs  fixed_point.rs  free_region_manager.rs  hash.rs  heap_tracker.rs  hex_util.rs  host_memory.rs  input.rs  intrusive_list.rs  intrusive_red_black_tree.rs  lib.rs  lock_order.rs  lru_cache.rs  lz4_compression.rs  math_util.rs  memory_detect.rs  multi_level_page_table.rs  page_table.rs  point.rs  quaternion.rs  range_map.rs  range_mutex.rs  range_sets.rs  scratch_buffer.rs  settings.rs  settings_common.rs  settings_enums.rs  (+23 more)
common/src/arm64/: mod.rs  native_clock.rs
common/src/fs/: file.rs  fs.rs  fs_paths.rs  fs_types.rs  fs_util.rs  mod.rs  path_util.rs
common/src/logging/: backend.rs  filter.rs  log_entry.rs  text_formatter.rs
common/src/x64/: cpu_detect.rs  cpu_wait.rs  mod.rs  native_clock.rs  rdtsc.rs
core/: Cargo.toml
core/crypto/: Cargo.toml
core/crypto/src/: aes_ecb.rs  aes_xts.rs  key_manager.rs  lib.rs  ticket.rs
core/src/: audio_core.rs  constants.rs  core.rs  core_timing.rs  cpu_manager.rs  device_memory.rs  device_memory_manager.rs  gpu_core.rs  gpu_dirty_memory_manager.rs  guest_memory.rs  hardware_properties.rs  host1x_core.rs  lib.rs  perf_stats.rs  reporter.rs  telemetry_session.rs
core/src/arm/: arm_interface.rs  debug.rs  exclusive_monitor.rs  mod.rs  symbols.rs
core/src/crypto/: aes_util.rs  ctr_encryption_layer.rs  encryption_layer.rs  key_manager.rs  mod.rs  partition_data_manager.rs  sha_util.rs  xts_encryption_layer.rs
core/src/debugger/: debugger.rs  debugger_interface.rs  gdbstub.rs  gdbstub_arch.rs  mod.rs
core/src/file_sys/: bis_factory.rs  card_image.rs  common_funcs.rs  content_archive.rs  control_metadata.rs  errors.rs  fs_directory.rs  fs_file.rs  fs_filesystem.rs  fs_memory_management.rs  fs_operate_range.rs  fs_path.rs  fs_path_utility.rs  fs_save_data_types.rs  fs_string_util.rs  fsmitm_romfsbuild.rs  ips_layer.rs  kernel_executable.rs  mod.rs  nca_metadata.rs  partition_filesystem.rs  patch_manager.rs  program_metadata.rs  registered_cache.rs  romfs.rs  romfs_factory.rs  savedata_factory.rs  sdmc_factory.rs  submission_package.rs  xts_archive.rs
core/src/frontend/: emu_window.rs  mod.rs  (+2 more)
dedicated_room/: Cargo.toml
dedicated_room/src/: main.rs
ruzu/: Cargo.toml
ruzu-core/: Cargo.toml
ruzu-core/src/: core.rs  core_timing.rs  cpu_manager.rs  device_memory.rs  hardware_properties.rs  perf_stats.rs
ruzu-crypto/: Cargo.toml
ruzu-crypto/src/: aes_ctr.rs  aes_ecb.rs  aes_xts.rs  key_manager.rs  lib.rs  ticket.rs
ruzu-gpu/: Cargo.toml
ruzu-gpu/src/: command_processor.rs  descriptor_table.rs  gpu_context.rs  lib.rs  macro_interpreter.rs  memory_manager.rs  rasterizer.rs  rasterizer_interface.rs  renderer.rs  surface.rs  swapchain.rs  syncpoint.rs
ruzu-kernel/: Cargo.toml
ruzu-kernel/src/: address_space_info.rs  capabilities.rs  code_set.rs  device_memory_manager.rs  guest_memory.rs  handle_table.rs  kernel.rs  lib.rs  memory.rs  memory_block.rs  memory_layout.rs  memory_manager.rs  objects.rs  page_table_kernel.rs  process.rs  scheduler.rs  svc.rs  thread.rs
ruzu-loader/: Cargo.toml
ruzu-loader/src/: game_info.rs  lib.rs  nacp.rs  nca.rs  nro.rs  nso.rs  nsp.rs  pfs.rs  vfs.rs  xci.rs
ruzu-service/: Cargo.toml
ruzu-service/src/: account.rs  am.rs  apm.rs  audio.rs  buffer_queue.rs  framework.rs  friends.rs  fs.rs  hid.rs  hid_shared_memory.rs  ipc.rs  lib.rs  lm.rs  nifm.rs  nsd.rs  nvdrv.rs  nvdrv_devices.rs  parcel.rs  pctl.rs  set.rs  sm.rs  ssl.rs  stubs.rs  time.rs  vi.rs
ruzu/src/: boot.rs  config.rs  config_import.rs  emu_window.rs  file_menu.rs  game_list.rs  game_list_ui.rs  loading_screen.rs  main.rs  main_window.rs  render_window.rs  status_bar.rs  vulkan_presenter.rs  window.rs
video_core/: Cargo.toml  build.rs
video_core/src/: cache_types.rs  capture.rs  cdma_pusher.rs  command_processor.rs  compatible_formats.rs  delayed_destruction_ring.rs  descriptor_table.rs  dirty_flags.rs  dma_pusher.rs  fence_manager.rs  framebuffer_config.rs  fsr.rs  gpu.rs  gpu_context.rs  gpu_thread.rs  guest_memory.rs  invalidation_accumulator.rs  lib.rs  macro_interpreter.rs  memory_manager.rs  present.rs  pte_kind.rs  query_cache_top.rs  rasterizer.rs  rasterizer_download_area.rs  rasterizer_interface.rs  renderer_base.rs  shader_cache.rs  shader_environment.rs  shader_notify.rs  smaa_area_tex.rs  smaa_search_tex.rs  surface.rs  swizzle.rs  transform_feedback.rs  video_core.rs
yuzu_cmd/: Cargo.toml
yuzu_cmd/src/: main.rs  main_log.rs  sdl_config.rs
(+1619 files in other folders)
