[workspace]
members = [
    "audio_core",
    "common",
    "core",
    "core/crypto",
    "shader_recompiler",
    "video_core",
    "hid_core",
    "input_common",
    "network",
    "web_service",
    "frontend_common",
    "dedicated_room",
    "yuzu_cmd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Internal crates
common = { path = "common" }
shader_recompiler = { path = "shader_recompiler" }
video_core = { path = "video_core" }
input_common = { path = "input_common" }
network = { path = "network" }
web_service = { path = "web_service" }
frontend_common = { path = "frontend_common" }

# JIT recompiler
rdynarmic = { path = "../rdynarmic" }

# CLI / Config
clap = { version = "4", features = ["derive"] }

# Window / Graphics
sdl2 = { version = "0.37", features = ["raw-window-handle", "bundled", "static-link"] }
ash = "0.37"
vulkano = "0.34"
raw-window-handle = "0.6"

# Crypto
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
sha2 = "0.10"
hex = "0.4"
md-5 = "0.10"

# Compression
lz4_flex = "0.11"

# OpenGL
gl = "0.14"

# SPIR-V
rspirv = "0.12"
spirv = "0.3"

# Core
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
cubeb = "0.34"
parking_lot = "0.12"
serde_json = "1"
tempfile = "3"
openssl = "0.10"
