[workspace]
members = [
    "audio_core",
    "common",
    "core",
    "core/crypto",
    "shader_recompiler",
    "video_core",
    "hid_core",
    "input_common",
    "network",
    "web_service",
    "frontend_common",
    "dedicated_room",
    "ruzu_cmd",
    "ruzu",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"

[workspace.dependencies]
# Internal crates
common = { path = "common" }
shader_recompiler = { path = "shader_recompiler" }
video_core = { path = "video_core" }
input_common = { path = "input_common" }
network = { path = "network" }
web_service = { path = "web_service" }
frontend_common = { path = "frontend_common" }

# JIT recompiler (vendored as a git submodule under externals/; rdynarmic in
# turn references rxbyak via `../rxbyak`, which resolves to externals/rxbyak).
rdynarmic = { path = "externals/rdynarmic" }

# CLI / Config
clap = { version = "4", features = ["derive"] }

# Window / Graphics
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
ash = "0.37"
vulkano = "0.34"
raw-window-handle = "0.6"

# Crypto
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
md-5 = "0.10"

# Compression
lz4_flex = "0.11"

# OpenGL
gl = "0.14"

# SPIR-V
rspirv = "0.12"
spirv = "0.3"

# Core
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
cubeb = "0.34"
parking_lot = "0.12"
serde_json = "1"
toml = "0.8"
tempfile = "3"
openssl = "0.10"
context = "3.0"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[profile.release]
debug = 1

# Opt-in profile for shipped / benchmarked binaries. Two knobs that match
# the corresponding rdynarmic release profile (commit f2a4cb8) MINUS the
# `lto` setting — see note below.
#
# Build with:
#   cargo build --profile release-lto --bin ruzu-cmd
#
# Caveats:
# - `panic = "abort"` skips unwinding. Any `catch_unwind` / `thread::join`
#   paths that today recover from a worker panic will instead see the whole
#   process abort. Re-check audio_core / GPU workers before shipping
#   binaries built with this profile.
# - LTO disabled: both `lto = "fat"` and `lto = "thin"` fail at the final
#   ruzu-cmd link with `failed to get bitcode from object file for LTO
#   (Can't find section .llvmbc)`. One of ruzu's C-linked transitive deps
#   (openssl-sys / ring / cubeb-sys / gl bindings via cc-rs?) ships a
#   static `.a` archive without embedded LLVM bitcode, which trips the LTO
#   linker. Fixing this would require identifying the offending crate and
#   either (a) adding `[profile.release-lto.package."NAME"] codegen-units
#   = 1` overrides to recompile its Rust glue, or (b) patching its
#   build.rs to pass `-fembed-bitcode` to its cc invocation. Until then,
#   ship without LTO — the CGU=1 + panic=abort pair still cuts unwind
#   tables and gives LLVM whole-crate visibility for the Rust portions.
[profile.release-lto]
inherits = "release"
codegen-units = 1
panic = "abort"
