[package]
name = "audio_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
ruzu_core = { package = "core", path = "../core" }
ruzu-kernel = { path = "../ruzu-kernel" }
cubeb.workspace = true
sdl2.workspace = true
log.workspace = true
parking_lot.workspace = true
