[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
lz4_flex.workspace = true
zstd = "0.13"
libc = "0.2"
parking_lot.workspace = true
corosensei.workspace = true
