[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
# Dependencies below are commented out until their compilation issues are resolved.
# They will be needed when wiring up subsystems (kernel, GPU, services, etc.)
# ruzu-cpu = { path = "../ruzu-cpu" }
# ruzu-kernel = { path = "../ruzu-kernel" }
# ruzu-service = { path = "../ruzu-service" }
# ruzu-loader = { path = "../ruzu-loader" }
# ruzu-gpu = { path = "../ruzu-gpu" }
aes.workspace = true
bitflags.workspace = true
cipher.workspace = true
ctr.workspace = true
hex.workspace = true
libc = "0.2"
log.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
sha2.workspace = true
