[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
aes.workspace = true
bitflags.workspace = true
cipher.workspace = true
ctr.workspace = true
hex.workspace = true
libc = "0.2"
log.workspace = true
lz4_flex.workspace = true
rdynarmic = { workspace = true }
memmap2.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
serde_json.workspace = true
sha2.workspace = true
