[package]
name = "ruzu-core"
version.workspace = true
edition.workspace = true

[dependencies]
ruzu-common = { path = "../ruzu-common" }
# Dependencies below are commented out until their compilation issues are resolved.
# They will be needed when wiring up subsystems (kernel, GPU, services, etc.)
# ruzu-cpu = { path = "../ruzu-cpu" }
# ruzu-kernel = { path = "../ruzu-kernel" }
# ruzu-service = { path = "../ruzu-service" }
# ruzu-loader = { path = "../ruzu-loader" }
# ruzu-gpu = { path = "../ruzu-gpu" }
log.workspace = true
parking_lot.workspace = true
