[package]
name = "ruzu-gpu"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
gl.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
vulkano.workspace = true
ash.workspace = true
raw-window-handle.workspace = true
parking_lot.workspace = true
rspirv.workspace = true
spirv.workspace = true
