[package]
name = "ruzu-loader"
version.workspace = true
edition.workspace = true

[dependencies]
ruzu-common.workspace = true
ruzu-crypto.workspace = true
log.workspace = true
thiserror.workspace = true
byteorder.workspace = true
bytemuck.workspace = true
sha2.workspace = true
lz4_flex.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
