[package]
name = "ruzu-service"
version.workspace = true
edition.workspace = true

[dependencies]
ruzu-common.workspace = true
ruzu-kernel.workspace = true
ruzu-gpu.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
byteorder.workspace = true
parking_lot.workspace = true
