[package]
name = "ruzu-service"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
audio_core = { path = "../audio_core" }
ruzu_core = { package = "core", path = "../core" }
ruzu-kernel.workspace = true
ruzu-gpu.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
byteorder.workspace = true
parking_lot.workspace = true
