[package]
name = "video_core"
version.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
ruzu_core = { package = "core", path = "../core" }
shader_recompiler.workspace = true
gl.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
vulkano.workspace = true
ash.workspace = true
raw-window-handle.workspace = true
parking_lot.workspace = true
rspirv.workspace = true
spirv.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
