[package]
name = "yuzu_cmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
debug-logs = ["ruzu_core/debug-logs"]

[[bin]]
name = "yuzu-cmd"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
ruzu_core = { package = "core", path = "../core" }
audio_core = { path = "../audio_core" }
video_core = { workspace = true }
input_common = { workspace = true }
frontend_common = { workspace = true }
parking_lot.workspace = true
gl = { workspace = true }
ash = { workspace = true }
raw-window-handle = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rdynarmic = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sdl2 = { version = "0.37", features = ["raw-window-handle", "bundled", "static-link"] }
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "0.37", features = ["raw-window-handle", "use-pkgconfig"] }
signal-hook = "0.3"
